# project_vehicle

./: .gitignore  CMakeLists.txt  bezier_reference.csv  main_simulator.cpp  mpc_tracking_result.csv  plot_result.py  tools.py
inc/: get_car_param.h  module_lon_control.h  module_mpc_control.h  module_physics_env.h  module_planning.h  module_state_estimator.h
osqp_bin/include/: osqp_configure.h
src/: get_car_param.cpp  module_lon_control.cpp  module_mpc_control.cpp  module_physics_env.cpp  module_planning.cpp  module_state_estimator.cpp
